--- a/src/api/config/options.yml.example
+++ b/src/api/config/options.yml.example
@@ -158,3 +158,7 @@ ldap_group_title_attr: cn
 # The value of the group objectclass attribute, leave it as "" if objectclass attr doesn't exist
 ldap_group_objectclass_attr: groupOfNames
 
+# The LDAP group for obs admins
+# if this group is set and a user belongs to this group he get the global admin role
+#
+ldap_obs_admin_group: obsadmins
