--- a/src/api/config/options.yml.example
+++ b/src/api/config/options.yml.example
@@ -9,7 +9,7 @@
 
 # Make use of X-Accel-Redirect for Nginx.
 # http://kovyrin.net/2010/07/24/nginx-fu-x-accel-redirect-remote
-#use_nginx_redirect: /internal_redirect 
+#use_nginx_redirect: /internal_redirect
 
 # Minimum count of rating votes a project/package needs to # be taken in account
 # for global statistics:
@@ -76,8 +76,8 @@ ldap_max_attempts: 15
 # timeout of a ldap search requests to avoid infinitely lookups (in seconds, 0 no timeout)
 ldap_search_timeout: 5
 
-# The attribute the user memberof is stored in
-ldap_user_memberof_attr: memberof
+# The attribute the user member of is stored in (case sensitive !)
+ldap_user_memberof_attr: memberOf
 
 # Perform the group_user search with the member attribute of group entry or memberof attribute of user entry
 # It depends on your ldap define
@@ -98,7 +98,7 @@ ldap_referrals: :off
 
 # OVERRIDE with your company's ldap search base for the users who will use OBS
 ldap_search_base: OU=Organizational Unit,DC=Domain Component
-# Sam Account Name is the login name for LDAP
+# Account name attribute (sAMAccountName for Active Directory, uid for openLDAP)
 ldap_search_attr: sAMAccountName
 # The attribute the users name is stored in
 ldap_name_attr: cn
@@ -147,15 +147,23 @@ ldap_entry_base: ou=OBSUSERS,dc=EXAMPLE,dc=COM
 # used for adding new entry
 ldap_sn_attr_required: :on
 
-# Whether to search group info from ldap, it does not take effect
-# when LDAP_GROUP_SUPPOR is not set.
-# Please also set below LDAP_GROUP_* configs correctly to ensure the operation works properly
+# Whether to search group info from ldap, it does not take effect it is not set
+# Please also set below ldap_group_* configs correctly to ensure the operation works properly
+# Possible values:
+#         :off     disabled
+#         :on      enabled; every group member operation ask the LDAP server
+#         :mirror  enabled; group membership is mirrored and updated on user login
+#
 ldap_group_support: :off
+
 # OVERRIDE with your company's ldap search base for groups
 ldap_group_search_base: ou=OBSGROUPS,dc=EXAMPLE,dc=COM
+
 # The attribute the group name is stored in
 ldap_group_title_attr: cn
-# The value of the group objectclass attribute, leave it as "" if objectclass attr doesn't exist
+
+# The value of the group objectclass attribute
+# group for Active Directory, groupOfNames in openLDAP
 ldap_group_objectclass_attr: groupOfNames
 
 # The LDAP group for obs admins
